# webapi_mvp

./: .env  Cargo.toml  Dockerfile  LICENSE.txt  README.md  docker-compose.yml
e2e/: Cargo.toml
e2e/src/: main.rs
e2e/tests/: e2e_test.rs
migrations/2023-08-07-144758_create_projects/: up.sql
migrations/2023-08-09-114855_create_technologies/: down.sql  up.sql
migrations/2023-08-09-114904_create_adopts/: down.sql  up.sql
src/: apis.rs  db_connector.rs  lib.rs  main.rs  models.rs  schema.rs
src/commands/: entries.rs
templates/: tech_page.html
tests/: e2e_test.rs  integration_test.rs
