[package]
name = "webapi_mvp"
version = "0.1.0"
edition = "2021"
default-run = "webapi_mvp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4"
actix-web = "4"
tera = { version = "1.7.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
thirtyfour = "0.31.0"
clap = { version = "4.0.11", features = ["derive"] }

[lib]
name = "webapi_mvp"
path = "src/lib.rs"

[[bin]]
name = "entry"
path = "src/commands/entries.rs"